--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlinx.kover'
 }
-
 android {
     namespace 'com.example.weatherdataapp'
     compileSdk 34
@@ -24,21 +26,79 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "17"
+        freeCompilerArgs = freeCompilerArgs + "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
+    }
+    buildFeatures {
+        viewBinding true
+    }
+    hilt {
+        enableAggregatingTask = true
     }
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // MVVM
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    // Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.47'
+    kapt 'com.google.dagger:hilt-compiler:2.47'
+
+    // Unit tests
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "androidx.arch.core:core-runtime:2.2.0"
+    testImplementation "androidx.arch.core:core-common:2.2.0"
+
+    testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    testImplementation 'org.robolectric:robolectric:4.6'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.50'
+    testImplementation 'androidx.test:rules:1.5.0'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
+    testImplementation("org.junit.vintage:junit-vintage-engine:5.8.2")
+
+    testImplementation("io.mockk:mockk:1.13.3")
+    testImplementation "io.mockk:mockk-android:1.13.3"
+    testImplementation "io.mockk:mockk-agent:1.13.3"
+    testImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.25'
+
+    testImplementation 'app.cash.turbine:turbine:0.13.0'
+
+    // UI Tests
+
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.50'
+    androidTestUtil 'androidx.test:orchestrator:1.4.2'
+
+    debugImplementation "androidx.fragment:fragment-testing:1.6.2"
 }
