--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        hilt_version = '2.44'
+    }
+}
 plugins {
-id 'com.android.application' version '8.2.1' apply false
+    id 'com.android.application' version '8.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+    id 'org.jetbrains.kotlinx.kover' version '0.7.2' apply false
+}
+
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 }
